refactor: move documenttype for documenttype namespace
