# app/Http/Controllers/DocumentType/DocumentTypeController.php
@@ -3,8 +3,8 @@
 namespace App\Http\Controllers\DocumentType;
 
 use App\Http\Controllers\Controller;
-use App\Models\Document\DocumentType;
-use App\Services\Document\DocumentTypeService;
+use App\Models\DocumentType\DocumentType;
+use App\Services\DocumentType\DocumentTypeService;
 use Illuminate\Http\Request;
 
 class DocumentTypeController extends Controller
