# app/Repositories/DocumentType/DocumentTypeRepository.php
@@ -1,13 +1,13 @@
 <?php
 
-namespace App\Repositories\Document;
+namespace App\Repositories\DocumentType;
 
 use Prettus\Repository\Contracts\RepositoryInterface;
 
 /**
  * Interface DocumentTypeRepository.
  *
- * @package namespace App\Repositories\Document;
+ * @package namespace App\Repositories\DocumentType;
  */
 interface DocumentTypeRepository extends RepositoryInterface
 {
